--- a/XYZReader/src/main/res/layout-sw600dp/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/activity_article_list.xml
@@ -18,8 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:elevation="4dp">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:elevation="4dp"
+        tools:targetApi="lollipop">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -27,17 +28,13 @@
             android:layout_height="?actionBarSize"
             android:layout_marginStart="@dimen/list_toolbar_side_margin"
             android:layout_marginEnd="@dimen/list_toolbar_side_margin"
-            app:theme="@style/Theme.Bacon"
             android:layout_gravity="bottom"
+            app:theme="@style/Theme.Bacon"
             app:layout_scrollFlags="scroll|enterAlways" >
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/image_view_side_margin"
-                android:paddingLeft="8dp"
-                android:paddingEnd="8dp"
-                android:paddingRight="8dp"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/app_name" />
 
@@ -59,10 +56,10 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/list_side_margin"
-                android:scrollbarStyle="outsideOverlay"
                 android:clipToPadding="false"
-                android:fitsSystemWindows="false"/>
+                android:fitsSystemWindows="false"
+                android:scrollbarStyle="outsideOverlay" />
+
         </android.support.v4.widget.SwipeRefreshLayout>
 
     </FrameLayout>
