--- a/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/photo_placeholder"
                 android:fitsSystemWindows="true">
-            <!--suppress AndroidLintContentDescription -->
+                <!--suppress AndroidLintContentDescription -->
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
@@ -50,18 +50,19 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:background="#333"
-                    android:orientation="vertical"
-                    android:paddingLeft="@dimen/detail_inner_horiz_margin"
-                    android:paddingRight="@dimen/detail_inner_horiz_margin"
-                    android:paddingTop="@dimen/detail_inner_horiz_margin">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/article_title"
                         style="?android:attr/textAppearanceLarge"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed"
                         android:lineSpacingMultiplier="0.9"
+                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
+                        android:paddingStart="@dimen/detail_inner_horiz_margin"
+                        android:paddingTop="@dimen/detail_inner_horiz_margin"
+                        android:textAlignment="center"
                         android:textColor="#fff"
                         android:textSize="@dimen/detail_title_text_size"
                         android:textStyle="bold"
@@ -73,6 +74,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/detail_inner_horiz_margin"
+                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
+                        android:paddingStart="@dimen/detail_inner_horiz_margin"
+                        android:textAlignment="center"
                         android:textColor="#8fff"
                         tools:text="Article byline" />
 
