--- a/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
@@ -1,27 +1,30 @@
-
-<android.support.v7.widget.CardView 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/list_side_margin"
     android:clickable="true"
+    android:elevation="2dp"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
-    android:elevation="2dp">
+    app:cardMaxElevation="8dp"
+    app:cardBackgroundColor="@color/cardview_shadow_end_color"
+    app:cardCornerRadius="@dimen/list_card_corner_radius"
+    tools:targetApi="lollipop" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+        <com.example.xyzreader.helper_classes.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:background="@color/photo_placeholder" />
+            android:background="@color/photo_placeholder"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/article_title"
@@ -30,12 +33,13 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="4"
-            android:paddingBottom="4dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingTop="4dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp"
             android:textAlignment="center"
             android:textColor="@color/black"
+            android:textStyle="normal|bold"
             tools:text="Title" />
 
         <TextView
@@ -45,13 +49,14 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
-            android:paddingBottom="4dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingTop="4dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="2dp"
             android:textAlignment="center"
-            android:textColor="#6000"
+            android:textColor="#263238"
             tools:text="Subtitle" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
