--- a/XYZReader/src/main/res/values-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-land/macro_layout.xml
@@ -1,5 +1,9 @@
 <resources>
     <!-- detail -->
-    <dimen name="detail_photo_height">224dp</dimen>
+    <dimen name="detail_photo_height">270dp</dimen>
+    <dimen name="detail_body_top_margin">16dp</dimen>
     <dimen name="detail_inner_horiz_margin">112dp</dimen>
+    <dimen name="detail_metabar_height">85dp</dimen>
+    <dimen name="detail_metabar_width">500dp</dimen>
+    <dimen name="detail_metabar_title_bottom_padding">4dp</dimen>
 </resources>
