--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,10 +16,10 @@
 -->
 
 <resources>
-    <color name="photo_placeholder">#ccc</color>
+    <color name="photo_placeholder">#d7ccc8</color>
 
     <color name="theme_primary">#009688</color>
     <color name="theme_primary_dark">#00796b</color>
-    <color name="theme_accent">#cddc39</color>
+    <color name="theme_accent">#ff6d00</color>
     <color name="black">#000000</color>
 </resources>
