--- a/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/fragment_article_detail.xml
@@ -1,7 +1,6 @@
 
 <com.example.xyzreader.helper_classes.DrawInsetsFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/draw_insets_frame_layout"
     android:layout_width="match_parent"
@@ -19,15 +18,16 @@
             <FrameLayout
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/detail_photo_height"
                 android:background="@color/photo_placeholder"
                 android:fitsSystemWindows="true">
-            <!--suppress AndroidLintContentDescription -->
+                <!--suppress AndroidLintContentDescription -->
+
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/detail_photo_height"
-                    android:adjustViewBounds="true"
+                    android:adjustViewBounds="false"
                     android:scaleType="centerCrop"
                     tools:ignore="ContentDescription" />
 
@@ -38,69 +38,70 @@
 
             </FrameLayout>
 
-        <com.example.xyzreader.helper_classes.MaxWidthLinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/photo_container"
-            android:layout_gravity="center_horizontal"
-            android:background="#fff"
-            android:elevation="2dp"
-            android:maxWidth="@dimen/detail_card_max_width"
-            android:orientation="vertical"
-            tools:targetApi="lollipop" >
 
-            <LinearLayout
-                android:id="@+id/meta_bar"
-                android:layout_width="@dimen/detail_metabar_width"
-                android:layout_height="@dimen/detail_metabar_height"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:background="#333"
-                android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:paddingTop="@dimen/detail_body_top_margin">
-
-                <TextView
-                    android:id="@+id/article_title"
-                    style="?android:attr/textAppearanceLarge"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"
-                    android:lineSpacingMultiplier="0.9"
-                    android:textColor="#fff"
-                    android:textSize="@dimen/detail_title_text_size"
-                    android:textStyle="bold"
-                    tools:text="Article text" />
-
-                <TextView
-                    android:id="@+id/article_byline"
-                    style="?android:attr/textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#8fff"
-                    tools:text="Article byline" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/article_body"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="@dimen/detail_metabar_width"
+            <com.example.xyzreader.helper_classes.MaxWidthLinearLayout
+                android:id="@+id/max_width_linear_layout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/detail_body_top_margin"
-                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                android:paddingBottom="@dimen/detail_body_bottom_margin"
-                android:paddingStart="16dp"
-                android:textColor="@color/black"
-                android:textColorLink="@color/theme_accent"
-                android:textSize="@dimen/detail_body_text_size"
-                tools:text="Body text" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/detail_max_width_linear_layout_top_margin"
+                android:background="#fff"
+                android:elevation="2dp"
+                android:orientation="vertical"
+                tools:targetApi="lollipop">
 
-        </com.example.xyzreader.helper_classes.MaxWidthLinearLayout>
+                <LinearLayout
+                    android:id="@+id/meta_bar"
+                    android:layout_width="@dimen/detail_metabar_width"
+                    android:layout_height="@dimen/detail_metabar_height"
+                    android:layout_gravity="center_horizontal"
+                    android:background="#333"
+                    android:orientation="vertical"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:paddingTop="@dimen/detail_body_top_margin">
 
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/article_title"
+                        style="?android:attr/textAppearanceLarge"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed"
+                        android:lineSpacingMultiplier="0.9"
+                        android:textColor="#fff"
+                        android:textSize="@dimen/detail_title_text_size"
+                        android:textStyle="bold"
+                        tools:text="Article text" />
+
+                    <TextView
+                        android:id="@+id/article_byline"
+                        style="?android:attr/textAppearanceSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#8fff"
+                        tools:text="Article byline" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/article_body"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="@dimen/detail_metabar_width"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/detail_body_top_margin"
+                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
+                    android:paddingBottom="@dimen/detail_body_inner_padding"
+                    android:paddingEnd="@dimen/detail_body_inner_padding"
+                    android:paddingStart="@dimen/detail_body_inner_padding"
+                    android:textColor="@color/black"
+                    android:textColorLink="@color/theme_accent"
+                    android:textSize="@dimen/detail_body_text_size"
+                    tools:text="Body text" />
+
+            </com.example.xyzreader.helper_classes.MaxWidthLinearLayout>
+
+            </RelativeLayout>
 
     </com.example.xyzreader.helper_classes.ObservableScrollView>
 
@@ -109,14 +110,13 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
         android:background="@drawable/add_fab_background"
         android:contentDescription="@string/action_share"
         android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_share"
         android:stateListAnimator="@animator/fab_state_list_anim"
-        app:elevation="6dp"
         tools:targetApi="lollipop" />
 
 </com.example.xyzreader.helper_classes.DrawInsetsFrameLayout>
