--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -26,7 +26,7 @@
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/detail_photo_height"
-                    android:adjustViewBounds="true"
+                    android:adjustViewBounds="false"
                     android:scaleType="centerCrop"
                     tools:ignore="ContentDescription" />
 
@@ -40,29 +40,32 @@
             <com.example.xyzreader.helper_classes.MaxWidthLinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/photo_container"
                 android:layout_gravity="center_horizontal"
-                android:orientation="vertical" >
+                android:layout_marginTop="@dimen/detail_max_width_linear_layout_top_margin"
+                android:background="#fff"
+                android:elevation="2dp"
+                android:maxWidth="@dimen/detail_card_max_width"
+                android:orientation="vertical"
+                tools:targetApi="lollipop">
 
                 <LinearLayout
                     android:id="@+id/meta_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
+                    android:layout_height="@dimen/detail_metabar_height"
+                    android:layout_gravity="center_horizontal"
                     android:background="#333"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp">
 
                     <TextView
                         android:id="@+id/article_title"
                         style="?android:attr/textAppearanceLarge"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed"
                         android:lineSpacingMultiplier="0.9"
-                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
-                        android:paddingStart="@dimen/detail_inner_horiz_margin"
-                        android:paddingTop="@dimen/detail_inner_horiz_margin"
-                        android:textAlignment="viewStart"
+                        android:paddingTop="@dimen/detail_body_top_margin"
                         android:textColor="#fff"
                         android:textSize="@dimen/detail_title_text_size"
                         android:textStyle="bold"
@@ -73,10 +76,6 @@
                         style="?android:attr/textAppearanceMedium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/detail_inner_horiz_margin"
-                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
-                        android:paddingStart="@dimen/detail_inner_horiz_margin"
-                        android:textAlignment="viewStart"
                         android:textColor="#8fff"
                         tools:text="Article byline" />
 
@@ -87,18 +86,20 @@
                     style="?android:attr/textAppearanceMedium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                    android:layout_marginTop="@dimen/detail_inner_horiz_margin"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/detail_body_top_margin"
                     android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                     android:paddingBottom="@dimen/detail_body_bottom_margin"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
                     android:textColor="@color/black"
+                    android:textColorLink="@color/theme_accent"
                     android:textSize="@dimen/detail_body_text_size"
                     tools:text="Body text" />
 
             </com.example.xyzreader.helper_classes.MaxWidthLinearLayout>
 
-        </RelativeLayout>
+        </FrameLayout>
 
     </com.example.xyzreader.helper_classes.ObservableScrollView>
 
@@ -107,13 +108,13 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        android:src="@drawable/ic_share"
-        android:elevation="@dimen/fab_elevation"
-        android:contentDescription="@string/action_share"
-        android:stateListAnimator="@animator/fab_state_list_anim"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/add_fab_background"
+        android:contentDescription="@string/action_share"
+        android:elevation="@dimen/fab_elevation"
+        android:src="@drawable/ic_share"
+        android:stateListAnimator="@animator/fab_state_list_anim"
         tools:targetApi="lollipop" />
 
 </com.example.xyzreader.helper_classes.DrawInsetsFrameLayout>
