--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -35,10 +35,10 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/image_view_side_margin"
-                android:paddingLeft="8dp"
-                android:paddingEnd="8dp"
-                android:paddingRight="8dp"
+                android:paddingStart="@dimen/list_image_logo_side_margin"
+                android:paddingLeft="@dimen/list_image_logo_side_margin"
+                android:paddingEnd="@dimen/list_image_logo_side_margin"
+                android:paddingRight="@dimen/list_image_logo_side_margin"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/app_name" />
 
