--- a/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
@@ -5,4 +5,7 @@
 
     <dimen name="detail_photo_height">600dp</dimen>
     <dimen name="detail_card_top_margin">256dp</dimen>
+    <dimen name="detail_metabar_height">100dp</dimen>
+    <dimen name="detail_bottom_margin">120dp</dimen>
+    <dimen name="detail_max_width_linear_layout_top_margin">320dp</dimen>
 </resources>
