--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -1,9 +1,11 @@
 <resources>
     <!-- list -->
-    <dimen name="list_side_margin">4dp</dimen>
+    <dimen name="list_side_margin">2dp</dimen>
     <dimen name="image_view_side_margin">8dp</dimen>
     <dimen name="list_toolbar_side_margin">0dp</dimen>
     <dimen name="list_card_corner_radius">4dp</dimen>
+    <dimen name="list_image_logo_side_margin">8dp</dimen>
+
     <integer name="list_column_count">2</integer>
 
 
@@ -15,6 +17,6 @@
     <dimen name="detail_card_max_width">10000dp</dimen> <!-- force match_parent -->
     <dimen name="detail_metabar_vert_padding">4dp</dimen>
     <dimen name="detail_metabar_title_bottom_padding">4dp</dimen>
-    <dimen name="detail_body_top_margin">16dp</dimen>
     <dimen name="detail_body_bottom_margin">88dp</dimen>
+
 </resources>
