--- a/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
@@ -6,101 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.example.xyzreader.helper_classes.ObservableScrollView
-        android:id="@+id/scrollview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <FrameLayout
-                android:id="@+id/photo_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/photo_placeholder"
-                android:fitsSystemWindows="true">
-                <!--suppress AndroidLintContentDescription -->
-                <ImageView
-                    android:id="@+id/photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/detail_photo_height"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    tools:ignore="ContentDescription" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="112dp"
-                    android:background="@drawable/photo_background_protection" />
-
-            </FrameLayout>
-
-            <com.example.xyzreader.helper_classes.MaxWidthLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/photo_container"
-                android:layout_gravity="center_horizontal"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:id="@+id/meta_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:background="#333"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/article_title"
-                        style="?android:attr/textAppearanceLarge"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-condensed"
-                        android:lineSpacingMultiplier="0.9"
-                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
-                        android:paddingStart="@dimen/detail_inner_horiz_margin"
-                        android:paddingTop="@dimen/detail_inner_horiz_margin"
-                        android:textAlignment="viewStart"
-                        android:textColor="#fff"
-                        android:textSize="@dimen/detail_title_text_size"
-                        android:textStyle="bold"
-                        tools:text="Article text" />
-
-                    <TextView
-                        android:id="@+id/article_byline"
-                        style="?android:attr/textAppearanceMedium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/detail_inner_horiz_margin"
-                        android:paddingEnd="@dimen/detail_inner_horiz_margin"
-                        android:paddingStart="@dimen/detail_inner_horiz_margin"
-                        android:textAlignment="viewStart"
-                        android:textColor="#8fff"
-                        tools:text="Article byline" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/article_body"
-                    style="?android:attr/textAppearanceMedium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                    android:layout_marginTop="@dimen/detail_inner_horiz_margin"
-                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                    android:paddingBottom="@dimen/detail_body_bottom_margin"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/detail_body_text_size"
-                    tools:text="Body text" />
-
-            </com.example.xyzreader.helper_classes.MaxWidthLinearLayout>
-
-        </RelativeLayout>
-
-    </com.example.xyzreader.helper_classes.ObservableScrollView>
+    <include
+        layout="@layout/observable_scroll_view" >
+    </include>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
