--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -33,6 +33,7 @@
             app:layout_scrollFlags="scroll|enterAlways" >
 
             <ImageView
+                android:transitionName="image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/list_image_logo_side_margin"
